--- a/login.html
+++ b/login.html
@@ -1,108 +1,34 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: content-box;
-    font-family: 'Poppins';
-    background-repeat: repeat-y;
-    background-image: url(wood-1759566_1920.jpg);
-    background-position: top;
-    background-position-y: 100%;
-    b
-}
+!DOCTYPE html>
+<html lang="en">
 
-.container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-}
+<head>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <title>Login</title>
+</head>
 
-.box {
-    width: 400px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 60px;
-    background: rgba(0, 0, 0, 0.8);
-    border-radius: 10px;
-}
+<body>
+    <div class="container">
+        <div class="box">
+            <h1>Login</h1>
+            <form action=""></form>
+            <div class="input-box">
+                <input type="text" name="username" autocomplete="off" required>
+                <label>username</label>
+            </div>
+            <div class="input-box">
+                <input type="password" name="password" autocomplete="off" required>
+                <label>password</label>
+            </div>
 
-.box h1 {
-    margin-bottom: 100px;
-    font-size: 30px;
-    color: #fff;
-    text-align: center;
-    text-transform: capitalize;
-    height: 2px;
-    color: white;
-    text-shadow: 1px 1px 2px black, 0 0 25px #2aaac3, 0 0 15px #2aaac3;
-    background: rgba(0, 0, 0, 0.8);
-}
+            <input type="submit" value="Login">
 
-.box .input-box {
-    position: relative;
-    background: transparent;
-}
 
-.input-box {
-    background: transparent;
-}
+            </form>
+        </div>
+    </div>
 
-.box .input-box input {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    letter-spacing: 1px;
-    color: #fff;
-    margin-bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    background: transparent;
-    outline: none;
-}
+</body>
 
-.box .input-box label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    letter-spacing: 1px;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    transition: 0.5s;
-    outline: none;
-    border: none;
-    background: transparent;
-}
-
-.box input[type="submit"] {
-    background: transparent;
-    border: none;
-    outline: none;
-    color: #fff;
-    margin-top: 70px;
-    background: #2aaac3;
-    padding: 7px 40px;
-    border-radius: 5px;
-    font-size: 15px;
-}
-
-.box input[type="submit"]:hover {
-    background: #2aaac3;
-    color: black;
-    box-shadow: 0 0 5px #2aaac3, 0 0 25px #2aaac3, 0 0 50px #2aaac3, 0 0 200px #2aaac3;
-}
-
-.box .input-box input:focus~label,
-.box .input-box input:valid~label {
-    top: -20px;
-    left: 0;
-    font-size: 12px;
-    color: #2aaac3;
-}
-
-.container .box {
-    width: 250px;
-    box-shadow: 0 4px 8px 0 #2aaac3, 0 6px 30px 0 #2aaac3;
-    text-align: center;
-}
+</html>
